fix(theming): extra margin

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,7 +29,6 @@
 }
 
 .head{
-  padding: 2.5em;
   width: 80%;
   margin: 0 auto;
   display: flex;
